# MLOPs_Project

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  cml_data.yaml  cml_model.yaml  data.dvc  data_tester.dvc  data_zip.zip.dvc  dataset.py  models.dvc  my_logger.py  profile-command.txt  profile.txt  profile_test.py  pyproject.toml  requirements.txt  requirements_backend.txt  requirements_dev.txt  tasks.py
.dvc/: config
.github/workflows/: linting.yaml  test_model.yaml  tests.yaml
configs/: train.yaml
dockerfiles/: api.dockerfile  backend.dockerfile  evaluate.dockerfile  frontend.dockerfile  run-command.txt  train.dockerfile  visualize.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
outputs/2025-01-16/15-16-06/.hydra/: config.yaml  hydra.yaml
outputs/2025-01-17/08-41-56/.hydra/: hydra.yaml
outputs/2025-01-17/23-19-27/.hydra/: hydra.yaml
outputs/2025-01-21/10-36-26/.hydra/: hydra.yaml
outputs/2025-01-21/10-36-48/.hydra/: hydra.yaml
outputs/2025-01-21/10-36-48/wandb/: latest-run
outputs/2025-01-21/10-38-53/.hydra/: hydra.yaml
outputs/2025-01-21/10-38-53/wandb/: latest-run
outputs/2025-01-21/10-39-16/.hydra/: config.yaml  hydra.yaml
outputs/2025-01-21/10-39-16/wandb/: latest-run
outputs/2025-01-21/11-19-03/.hydra/: hydra.yaml
outputs/2025-01-21/11-19-03/wandb/: latest-run
reports/: README.md  report.py
src/rice_images/: api.py  backend.py  data.py  evaluate.py  frontend.py  model.py  train.py  visualize.py
tests/: __init__.py  test_api.py  test_data.py  test_model.py  test_training.py
(+15 files in other folders)
